# Web-Calculator

./: .gitignore  README.md
Back_End/: CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  main.cpp
Back_End/include/: CalcResourceFactory.cpp  CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  IResourceFactory.h  IServiceSettingsFactory.h
Back_End/lib/: librestbed.4.dylib
Front_End/src/: App.js  Calculator.js  CalculatorApi.js  CalculatorButton.js  CalculatorDisplay.js  CalculatorPanel.js  index.css
